Adding persistent mode for simple EAI

--- a/default/restmap.conf
+++ b/default/restmap.conf
@@ -16,6 +16,24 @@ handlerfile = simple_eai_handler.py
 handleractions = list
 
 
+####################################################
+# REST definition for persistent EAI REST handler
+# This definition will map to the following path:
+#
+#	/simple_eai_persistent
+#
+#####################################################
+[admin:simple_eai_persistent]
+match = /
+members = simple_eai_persistent
+
+[admin_external:simple_eai_persistent]
+handlertype = python
+handlerfile = simple_eai_handler.py
+handleractions = list
+handlerpersistentmode = true
+
+
 #############################################################################
 # Persistent non-EAI handler that echoes input arguments.
 #
