--- a/default/web.conf
+++ b/default/web.conf
@@ -4,7 +4,11 @@
 methods = GET
 pattern = echo_persistent
 
-# Expose the echo_eai endpoint via Splunkweb on port 8000.
-[expose:echo_eai]
+# Expose the simple_eai endpoint via Splunkweb on port 8000.
+[expose:simple_eai]
 methods = GET
-pattern = echo_eai
+pattern = simple_eai
+
+[expose:simple_eai_persistent]
+methods = GET
+pattern = simple_eai_persistent
