Fixing simple_eai examples.

--- a/default/restmap.conf
+++ b/default/restmap.conf
@@ -7,10 +7,10 @@
 #
 #####################################################
 [admin:simple_eai]
-match = /
-members = simple_eai
+match = /simple_eai
+members = persistent,nonpersistent
 
-[admin_external:simple_eai]
+[admin_external:nonpersistent]
 handlertype = python
 handlerfile = simple_eai_handler.py
 handleractions = list
@@ -23,11 +23,7 @@ handleractions = list
 #	/simple_eai_persistent
 #
 #####################################################
-[admin:simple_eai_persistent]
-match = /
-members = simple_eai_persistent
-
-[admin_external:simple_eai_persistent]
+[admin_external:persistent]
 handlertype = python
 handlerfile = simple_eai_handler.py
 handleractions = list
