Adding simple example of using a single REST handler to return output in both JSON and raw formats.

--- a/default/web.conf
+++ b/default/web.conf
@@ -12,3 +12,8 @@ pattern = simple_eai
 [expose:simple_eai_persistent]
 methods = GET
 pattern = simple_eai_persistent
+
+# Expose the raw_persistent endpoint via Splunkweb on port 8000.
+[expose:multiformat_persistent]
+methods = GET
+pattern = multiformat_persistent
