--- a/default/restmap.conf
+++ b/default/restmap.conf
@@ -54,4 +54,25 @@ passHttpCookies       = true
 
 
 
+#############################################################################
+# Persistent non-EAI handler that reverses and returns the input as a
+# base64-encoded string.
+#
+# WARNING: No special capability is required to use this handler. In a
+# production environment, it would be extremely dangerous to utilize this
+# handler as information about the Splunk environment would be exposed to
+# any authorized user.
+#############################################################################
+[script:raw]
+match                 = /multiformat_persistent
+script                = multiformat_persistent_handler.py
+scripttype            = persist
+handler               = multiformat_persistent_handler.MultiformatPersistentHandler
+requireAuthentication = true
+output_modes          = json
+passPayload           = true
+passHttpHeaders       = true
+passHttpCookies       = true
+
+
 
