--- a/default/restmap.conf
+++ b/default/restmap.conf
@@ -55,15 +55,16 @@ passHttpCookies       = true
 
 
 #############################################################################
-# Persistent non-EAI handler that reverses and returns the input as a
-# base64-encoded string.
+# Persistent non-EAI handler that reverses the input. Intended to demonstrate
+# the ability of a single persistent handler to return multiple distinct
+# output formats (e.g., JSON, raw).
 #
 # WARNING: No special capability is required to use this handler. In a
 # production environment, it would be extremely dangerous to utilize this
 # handler as information about the Splunk environment would be exposed to
 # any authorized user.
 #############################################################################
-[script:raw]
+[script:multiformat]
 match                 = /multiformat_persistent
 script                = multiformat_persistent_handler.py
 scripttype            = persist
