Updated several things:
- Corrected errors in restmap.conf
- Added new entries in restmap.conf to clarify the use of "match" and
  "members" parameters.
- Updated examples for Simple EAI REST handler.
- Removed defunct custom.conf file.
- Added PID to the EAI handlers for simpler demonstration of the
  process persistence feature.

--- a/default/restmap.conf
+++ b/default/restmap.conf
@@ -1,16 +1,44 @@
 
 ####################################################
-# REST definition for non-persistent EAI REST handler
-# This definition will map to the following path:
+# Mapping for persistent and non-persistent handlers
+# beneath a single root. This will map the following
+# paths:
 #
-#	/echo_eai
+#       /examples       <-- lists both handlers
+#       /examples/simple_eai_persistent
+#       /examples/simple_eai_nonpersistent
+#
+# Note that loading the base /examples is sufficient
+# to spawn an instance of the persistent handler,
+# which will remain resident waiting for requests.
+#####################################################
+[admin:examples]
+match = /examples
+members = simple_eai_persistent,simple_eai_nonpersistent
+
+####################################################
+# Mapping for persistent and non-persistent handlers
+# beneath distinct roots. This will map the following
+# paths:
+#
+#       /persisent/simple_eai_persistent
+#       /nonpersistent/simple_eai_nonpersistent
 #
 #####################################################
-[admin:simple_eai]
-match = /simple_eai
-members = persistent,nonpersistent
+[admin:persistent]
+match = /persistent
+members = simple_eai_persistent
 
-[admin_external:nonpersistent]
+[admin:nonpersistent]
+match = /nonpersistent
+members = simple_eai_nonpersistent
+
+
+####################################################
+# REST definition for non-persistent EAI REST handler
+#
+#####################################################
+[admin_external:simple_eai_nonpersistent]
 handlertype = python
 handlerfile = simple_eai_handler.py
 handleractions = list
@@ -18,16 +46,14 @@ handleractions = list
 
 ####################################################
 # REST definition for persistent EAI REST handler
-# This definition will map to the following path:
-#
-#	/simple_eai_persistent
 #
 #####################################################
-[admin_external:persistent]
+[admin_external:simple_eai_persistent]
 handlertype = python
 handlerfile = simple_eai_handler.py
 handleractions = list
 handlerpersistentmode = true
+
 
 
 #############################################################################
