--- a/default/web.conf
+++ b/default/web.conf
@@ -4,16 +4,37 @@
 methods = GET
 pattern = echo_persistent
 
-# Expose the simple_eai endpoint via Splunkweb on port 8000.
-[expose:simple_eai]
-methods = GET
-pattern = simple_eai
-
-[expose:simple_eai_persistent]
-methods = GET
-pattern = simple_eai_persistent
-
-# Expose the raw_persistent endpoint via Splunkweb on port 8000.
+# Expose the multiformat_persistent endpoint via Splunkweb on port 8000.
 [expose:multiformat_persistent]
 methods = GET
 pattern = multiformat_persistent
+
+
+# Expose the shared-root EAI endpoints via Splunkweb on port 8000, in
+# persistent and non-persistent modes.
+[expose:examples]
+methods = GET
+pattern = examples
+
+[expose:examples_elements]
+methods = GET
+pattern = examples/*
+
+
+# Expose the non-shared-root EAI endpoints via Splunkweb on port 8000, in
+# persistent and non-persistent modes.
+[expose:persistent]
+methods = GET
+pattern = persistent
+
+[expose:persistent_elements]
+methods = GET
+pattern = persistent/*
+
+[expose:nonpersistent]
+methods = GET
+pattern = nonpersistent
+
+[expose:nonpersistent_elements]
+methods = GET
+pattern = nonpersistent/*
