--- a/default/restmap.conf
+++ b/default/restmap.conf
@@ -1,61 +1,4 @@
 
-####################################################
-# Mapping for persistent and non-persistent handlers
-# beneath a single root. This will map the following
-# paths:
-#
-#       /examples       <-- lists both handlers
-#       /examples/simple_eai_persistent
-#       /examples/simple_eai_nonpersistent
-#
-# Note that loading the base /examples is sufficient
-# to spawn an instance of the persistent handler,
-# which will remain resident waiting for requests.
-#####################################################
-[admin:examples]
-match = /examples
-members = simple_eai_persistent,simple_eai_nonpersistent
-
-####################################################
-# Mapping for persistent and non-persistent handlers
-# beneath distinct roots. This will map the following
-# paths:
-#
-#       /persistent/simple_eai_persistent
-#       /nonpersistent/simple_eai_nonpersistent
-#
-#####################################################
-[admin:persistent]
-match = /persistent
-members = simple_eai_persistent
-
-[admin:nonpersistent]
-match = /nonpersistent
-members = simple_eai_nonpersistent
-
-
-####################################################
-# REST definition for non-persistent EAI REST handler
-#
-#####################################################
-[admin_external:simple_eai_nonpersistent]
-handlertype = python
-handlerfile = simple_eai_handler.py
-handleractions = list
-
-
-####################################################
-# REST definition for persistent EAI REST handler
-#
-#####################################################
-[admin_external:simple_eai_persistent]
-handlertype = python
-handlerfile = simple_eai_handler.py
-handleractions = list
-handlerpersistentmode = true
-
-
-
 #############################################################################
 # Persistent non-EAI handler that echoes input arguments.
 #
@@ -68,38 +11,13 @@ handlerpersistentmode = true
 # any authorized user.
 #############################################################################
 [script:echo]
-match                 = /echo_persistent
-script                = echo_persistent_handler.py
+match                 = /virga-api
+script                = ask_gene_kranz.py
 scripttype            = persist
-handler               = echo_persistent_handler.EchoHandler
+handler               = ask_gene_kranz.VirgaApi
 requireAuthentication = true
 output_modes          = json
 passPayload           = true
 passHttpHeaders       = true
 passHttpCookies       = true
-
-
-
-#############################################################################
-# Persistent non-EAI handler that reverses the input. Intended to demonstrate
-# the ability of a single persistent handler to return multiple distinct
-# output formats (e.g., JSON, raw).
-#
-# WARNING: No special capability is required to use this handler. In a
-# production environment, it would be extremely dangerous to utilize this
-# handler as information about the Splunk environment would be exposed to
-# any authorized user.
-#############################################################################
-[script:multiformat]
-match                 = /multiformat_persistent
-script                = multiformat_persistent_handler.py
-scripttype            = persist
-handler               = multiformat_persistent_handler.MultiformatPersistentHandler
-requireAuthentication = true
-output_modes          = json
-passPayload           = true
-passHttpHeaders       = true
-passHttpCookies       = true
-
-
 
