--- a/default/web.conf
+++ b/default/web.conf
@@ -1,40 +1,6 @@
 
 # Expose the echo_persistent endpoint via Splunkweb on port 8000.
-[expose:echo_persistent]
+[expose:go_no_go]
 methods = GET
-pattern = echo_persistent
+pattern = go_no_go
 
-# Expose the multiformat_persistent endpoint via Splunkweb on port 8000.
-[expose:multiformat_persistent]
-methods = GET
-pattern = multiformat_persistent
-
-
-# Expose the shared-root EAI endpoints via Splunkweb on port 8000, in
-# persistent and non-persistent modes.
-[expose:examples]
-methods = GET
-pattern = examples
-
-[expose:examples_elements]
-methods = GET
-pattern = examples/*
-
-
-# Expose the non-shared-root EAI endpoints via Splunkweb on port 8000, in
-# persistent and non-persistent modes.
-[expose:persistent]
-methods = GET
-pattern = persistent
-
-[expose:persistent_elements]
-methods = GET
-pattern = persistent/*
-
-[expose:nonpersistent]
-methods = GET
-pattern = nonpersistent
-
-[expose:nonpersistent_elements]
-methods = GET
-pattern = nonpersistent/*
