--- a/default/app.conf
+++ b/default/app.conf
@@ -6,11 +6,10 @@
 is_configured = 0
 
 [ui]
-is_visible = true
-label = rest_examples
+is_visible = false
 
 [launcher]
-author = James Ervin <jervin@splunk.com>
-description = Python REST handler example app
+author = Jason Herbage
+description = Virga API
 version = 1.0
 
